--- a/css/bassiness.css
+++ b/css/bassiness.css
@@ -77,7 +77,7 @@
     font-size: 0.24rem;
 }
 .shangJCont>li:nth-child(3){
-    margin-top: 0.15rem;
+    margin-top: 0.1rem;
 }
 .FSco{
     color: #ff0ebe;
@@ -130,11 +130,11 @@
 }
 .foodBox>ul>li{
     width: 100%;
-    height: 1.38rem;
+    /*height: 1.38rem;*/
     background: #ffffff;
     border-radius: 0.1rem;
     display: flex;
-    margin-bottom: 0.24rem;
+    margin-bottom: 0.2rem;
 }
 #foodList>ul>li>img{
     width:0.96rem;
@@ -230,7 +230,7 @@
     height: 0.51rem;
 }
 .money {
-    width: 0.98rem;
+    width: 1.98rem;
     height: 1.09rem;
     float: left;
     line-height: 0.46rem;
