--- a/css/personal.css
+++ b/css/personal.css
@@ -42,7 +42,7 @@
     width: 100%;
     height: 1.54rem;
     background: #fff;
-    padding-top:0.19rem;
+    padding-top:0.1rem;
     border-radius: 0.1rem;
     display: flex;
     box-shadow: 0 0.05rem 0.15rem 0
@@ -119,7 +119,7 @@
     color: rgba(0,0,0,0.1);
 }
 .cardBox>a{
-    width: 0.68rem;
+    width: 100%;
     height: 0.47rem;
     text-align: center;
     line-height: 0.47rem;
@@ -139,10 +139,9 @@
 /*功能分区开始*/
 #fcList{
     width: 100%;
-    height: 100%;
+    height: 65%;
     background: #eee;
     padding-top: 0.24rem;
-    position: fixed;
 }
 .listFunction{
     width: 100%;
